attempt button fix (showing above mobile navbar) on safari #1

--- a/public/css/header.css
+++ b/public/css/header.css
@@ -295,12 +295,16 @@
             align-items: center;
     position: relative;
     padding: 0 13px;
+    z-index: 998;
+    -webkit-transform: translate3d(0,0,0);
   }
 
     .nav_donate > form {
       position: absolute;
       top: -10px;
       right: 16px;
+      z-index: 998;
+      -webkit-transform: translate3d(0,0,0);
     }
 
       .nav_donate > form > button {
@@ -316,14 +320,13 @@
         font-family: 'Roboto Slab', serif;
         position: -webkit-sticky;
         position: sticky;
+        z-index: 998;
+        -webkit-transform: translate3d(0,0,0);
       }
 
       .nav_donate > form > button:hover {
         cursor: pointer;
       }
-
-
-
 
 .header_mobile {
   display: none;
